--- a/Project Hypothesis testing.ipynb
+++ b/Project Hypothesis testing.ipynb
@@ -1287,21 +1287,13 @@
    "id": "af52194d",
    "metadata": {},
    "source": [
-    "# Hypothesis Testing Project Completed -----------------------------"
+    "# `Hypothesis Testing Project Completed -----------------------------`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89e745ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1315,7 +1307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
