--- a/Sampling Techniques.ipynb
+++ b/Sampling Techniques.ipynb
@@ -643,12 +643,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "8409a132",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cac55946",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8299, 3315, 9555, 9028, 2855, 5439, 7948, 1201, 7699, 8813])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(0,9999,10)"
    ]
   },
   {
@@ -2658,7 +2680,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c6904cfa",
+   "id": "5eb2824e",
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2704,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "928b6ddb",
+   "id": "93b7a124",
    "metadata": {},
    "outputs": [
     {
