--- a/Descriptive Stats - I.ipynb
+++ b/Descriptive Stats - I.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3a99e64",
+   "id": "ab4d968f",
    "metadata": {},
    "source": [
     "#### adding a outlier here"
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200d51b9",
+   "id": "3b1db9f4",
    "metadata": {},
    "source": [
     "#### mean has shifted due to outlier"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ab8258fa",
+   "id": "c5427488",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b784cbf",
+   "id": "0cd3f795",
    "metadata": {},
    "source": [
     "### IQR"
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "927549f6",
+   "id": "4d7d7a9a",
    "metadata": {},
    "source": [
     "### outliers"
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d369532",
+   "id": "d068ec40",
    "metadata": {},
    "source": [
     "## `concept check`"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "96b30e56",
+   "id": "8f6848ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c6fac23f",
+   "id": "a4e215ae",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7610f2bc",
+   "id": "070b313e",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "99af73da",
+   "id": "40bbe79a",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3a8959",
+   "id": "11df265d",
    "metadata": {},
    "source": [
     "## 5. `Mean absolute deviation`\n",
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "66672a44",
+   "id": "d419fb72",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1cff8f1",
+   "id": "5adef05f",
    "metadata": {},
    "source": [
     "### skewness between -1 to +1 is acceptable\n",
@@ -1664,7 +1664,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ab48ef",
+   "id": "279eb6a2",
+   "metadata": {},
+   "source": [
+    "# `Concept check`\n",
+    "### Std is a way of saying how far typical values are from the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "43f04c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean => 10.5\n",
+      "Std => 5.766281297335398\n",
+      "Mean => 5.5\n",
+      "Std => 2.8722813232690143\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "num2 = [1,2,3,4,5,6,7,8,9,10,1,2,3,4,5,6,7,8,9,10]\n",
+    "print(f'Mean => {np.mean(num1)}')\n",
+    "print(f'Std => {np.std(num1)}')\n",
+    "print(f'Mean => {np.mean(num2)}')\n",
+    "print(f'Std => {np.std(num2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fad16918",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean => 10.0\n",
+      "Std => 1.4832396974191326\n",
+      "Mean => 10.0\n",
+      "Std => 1.7320508075688772\n",
+      "Mean => 10.0\n",
+      "Std => 7.019453488180349\n"
+     ]
+    }
+   ],
+   "source": [
+    "player1 = [7,9,9,10,10,10,10,11,11,13]\n",
+    "player2 = [7,8,9,9,10,10,11,11,12,13]\n",
+    "player3 = [3,3,6,7,7,10,10,10,11,13,30]\n",
+    "print(f'Mean => {np.mean(player1)}')\n",
+    "print(f'Std => {np.std(player1)}')\n",
+    "print(f'Mean => {np.mean(player2)}')\n",
+    "print(f'Std => {np.std(player2)}')\n",
+    "print(f'Mean => {np.mean(player3)}')\n",
+    "print(f'Std => {np.std(player3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0bb67d6",
+   "metadata": {},
+   "source": [
+    "#### Player1 and Player2 both have small std so the values are clustered around mean. But player 3 has a std of 7 points away from the mean. Play 3 is least reliable and Player 1 is most reliable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8ba0662",
    "metadata": {},
    "source": [
     "# `END`"
