--- a/Descriptive Stats - II_Visulaization.ipynb
+++ b/Descriptive Stats - II_Visulaization.ipynb
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21201c57",
+   "id": "be3b7e90",
    "metadata": {},
    "source": [
     "### `shaded blue is confidence interval`"
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb930b7f",
+   "id": "5ddb757c",
    "metadata": {},
    "source": [
     "### For high level customization use matplotlib"
@@ -1687,6 +1687,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cee990b",
+   "metadata": {},
+   "source": [
+    "### `two way frequency`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "id": "538ac98b",
@@ -1758,7 +1766,7 @@
     }
    ],
    "source": [
-    "pd.crosstab(tips_df[\"sex\"],tips_df[\"day\"]) #-> two way frequency"
+    "pd.crosstab(tips_df[\"sex\"],tips_df[\"day\"]) # -> two way frequency"
    ]
   },
   {
