--- a/Probability Distribution and Inferential Statistics.ipynb
+++ b/Probability Distribution and Inferential Statistics.ipynb
@@ -139,6 +139,8 @@
     "1. The formula for Poisson distribution is f(x) = P(X=x) = (e-λ λx )/x!.\n",
     "2. For the Poisson distribution, λ is always greater than 0.\n",
     "3. For Poisson distribution, the mean and the variance of the distribution are equal.\n",
+    "- The Poisson distribution table shows different values of Poisson distribution for various values of λ, where λ>0. Here in the table given below, we can see that, for P(X =0) and λ = 0.5, the value of the probability mass function is 0.6065 or 60.65%.\n",
+    "![](https://d138zd1ktt9iqe.cloudfront.net/media/seo_landing_files/poisson-distribution-table-1618475280.png)\n",
     "\n",
     "# `Continious`:\n",
     "\n",
@@ -158,11 +160,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4369c398",
+   "id": "f5b5fb0f",
    "metadata": {},
    "source": [
-    "# `END -------------------------------------`"
+    "# `Inferential Statistics`\n",
+    "- Sample distribution will be **normal** when taken larger sample\n",
+    "\n",
+    "### `Central Limit Theorem`\n",
+    "#### [Indepth Intuition Read here](https://www.cuemath.com/data/central-limit-theorem/)\n",
+    "![](https://d138zd1ktt9iqe.cloudfront.net/media/seo_landing_files/central-limit-theorem-formula-1637296571.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3299c7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39430fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
