--- a/Probability Distribution and Inferential Statistics.ipynb
+++ b/Probability Distribution and Inferential Statistics.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b5fb0f",
+   "id": "6a5483ee",
    "metadata": {},
    "source": [
     "# `Inferential Statistics`\n",
@@ -168,24 +168,25 @@
     "\n",
     "### `Central Limit Theorem`\n",
     "#### [Indepth Intuition Read here](https://www.cuemath.com/data/central-limit-theorem/)\n",
-    "![](https://d138zd1ktt9iqe.cloudfront.net/media/seo_landing_files/central-limit-theorem-formula-1637296571.png)"
+    "![](https://d138zd1ktt9iqe.cloudfront.net/media/seo_landing_files/central-limit-theorem-formula-1637296571.png)\n",
+    "#### [Regression Toward The Mean](https://en.wikipedia.org/wiki/Regression_toward_the_mean)\n",
+    "#### [Dirichlet Distribution](https://en.wikipedia.org/wiki/Dirichlet_distribution)\n",
+    "#### `Std of Sample distribution/root(n)` is called `Standard error(SE)`\n",
+    "#### `Margin of Error`: 1/root(n)\n",
+    "![](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwIU9Wo_FX6g9_HiugGSBLeEmdI94q4msNVQ&usqp=CAU)\n",
+    "#### `Confidence Interval(CI)`\n",
+    "![](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-QWu82tjaWX_0R8NJyHs93gsZ4rV1besRpQ&usqp=CAU)\n",
+    "#### Here +/- 1.96(std/root(n)) is margin of error\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/f/f9/Margin-of-error-95.svg)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3299c7cc",
+   "cell_type": "markdown",
+   "id": "c0d51241",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39430fa0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# `END ----------------------------------------`"
+   ]
   }
  ],
  "metadata": {
