--- a/Probability Distribution and Inferential Statistics.ipynb
+++ b/Probability Distribution and Inferential Statistics.ipynb
@@ -177,7 +177,14 @@
     "#### `Confidence Interval(CI)`\n",
     "![](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-QWu82tjaWX_0R8NJyHs93gsZ4rV1besRpQ&usqp=CAU)\n",
     "#### Here +/- 1.96(std/root(n)) is margin of error\n",
-    "![](https://upload.wikimedia.org/wikipedia/commons/f/f9/Margin-of-error-95.svg)"
+    "![](https://upload.wikimedia.org/wikipedia/commons/f/f9/Margin-of-error-95.svg)\n",
+    "\n",
+    "# `Hypothesis Testing`\n",
+    "\n",
+    "### Type 1 error: False alarm\n",
+    "### Type 2 alarm: actual alarm you missed\n",
+    "\n",
+    "### 1. `Z Test`: test for normal distribution\n"
    ]
   },
   {
